# browser-history-rofi

./: Cargo.toml  flake.nix
src/: lib.rs
